# repos

./: .gitignore  .gitlab-ci.yml  cabal.config  config.json.template  fetch-my-bitbucket-projects.cabal  fetch-my-git-projects.cabal  get.sh  known_hosts  package.yaml  projects.cabal  readme.md  run.bat  run.sh  stack.yaml
.github/workflows/: haskell.yml
haskell/: fetch-my-bitbucket-projects.cabal  run.sh
haskell/src/: Bitbucket.hs  Config.hs  Git.hs  Main.hs
java/: local.properties.template  pom.xml  run.sh
java/src/main/java/fetch/my/bitbucket/projects/: Config.java  Main.java
src/: Bitbucket.hs  Config.hs  Exception.hs  Git.hs  Gitlab.hs  Main.hs
src/Project/: Bitbucket.hs  Config.hs  Exception.hs  Git.hs  GitHub.hs  GitLab.hs  GitProvider.hs  Gitlab.hs  HTTP.hs  Logging.hs  Main.hs
