name:                projects
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable projects
  hs-source-dirs:      src
  main-is:             Project/Main.hs
  other-modules:       Project.Bitbucket
                     , Project.Config
                     , Project.Exception
                     , Project.Git
                     , Project.Gitlab
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , async
                     , base
                     , bytestring
                     , case-insensitive
                     , directory
                     , filepath
                     , http-client
                     , http-client-tls
                     , http-types
                     , process
                     , text
  default-language:    Haskell2010
