name:                fetch-my-bitbucket-projects
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

executable fetch-my-bitbucket-projects
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Config
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base
                     , bytestring
                     , directory
                     , filepath
                     , http-client
                     , http-client-tls
                     , http-types
                     , process
                     , text
  default-language:    Haskell2010
